[package]
name = "actix-utils"
version = "0.4.6"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actix utils - various actix net related services"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net.git"
documentation = "https://docs.rs/actix-utils/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
edition = "2018"
workspace = ".."

[lib]
name = "actix_utils"
path = "src/lib.rs"

[dependencies]
actix-service = "0.4.1"
actix-codec = "0.1.2"
bytes = "0.4"
either = "1.5.2"

futures = { package = "futures-preview", version = "0.3.0-alpha.18" }
pin-project = "0.4.0-alpha.11"
tokio-timer = "0.3.0-alpha.4"
tokio-executor = "0.2.0-alpha.4"

log = "0.4"

[dev-dependencies]
actix-rt = "0.2.2"
